--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_spinkit: ^5.0.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +72,8 @@ flutter:
     - images/logo.png
     - images/leton.jpg
     - images/rcrd.jpeg
+    - images/samara.jpeg
+    - images/coma.png
 
     # To add assets to your application, add an assets section, like this:
     # assets:
